--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>TodoList App</title>
 </head>
 <body>
-    
+    <div class="container mx-auto">
+        <h2 class="font-semibold text-white bg-red-500">I will like to start building JavaScript project</h2>
+    </div>
 </body>
 </html>
