work in the content configuration

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./dist/output.css">
+    <link rel="stylesheet" href="dist/output.css">
     <title>TodoList App</title>
 </head>
 <body>
     <div class="container mx-auto">
-        <h2 class="font-semibold text-white bg-red-500">I will like to start building JavaScript project</h2>
+        <h2 class="font-semibold text-white bg-red-500 mt-10">I will like to start building JavaScript project</h2>
     </div>
 </body>
 </html>
